﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-02-10
	Changed: I/O priority requires `IO Priority=true` in [Experimental] in Core.ini.
	Added: I/O priority is now in experiment config dialog and in watchlist rule editor.
### 2019-02-09
	Internal: Hiding some things to not be usable where they shouldn't.
	Added: I/O priority control. Watchlist.ini now has `IO priority` setting. This may be inherited, so care needs to be taken when applying it to launchers.
		Valid values are 0 = background, 1 = low, 2 = normal.
### 2019-02-07
	Fixed: Affinity ideal nor Log adjusts settings were not saved across restarts when set in UI.
### 2019-02-05
	Changed: Exclusive mode error handling.
	Changed: Power mode reporting clarified.
	Removed: Path and scanning debug options removed from UI.
### 2019-02-04 Version 0.13
	Added: Watchlist rule editing automatically fills in path when running process is selected, if no path is defined yet.
	Added: Process select dialog now can contain messages.
	Internal: Lots of changes. And version bump.
	Fixed: Year 2019 in changelog. Cut&paste bad, correct dating good. (reported by Chairkicker Nick)
	Fixed: Process&Foreground debug.

## [0.12...]
### 2019-02-03
	Changed: Power mode stuff, especially in relation to session unlock.
	Internal: Reducing monolithic nature of UI building. Should have no effect to end users.
### 2019-02-02
	Internal: Simplified things related process exit detection. Something may have broken.
	Removed: Batch processing support.
	Removed: WMI Queries option from Core.ini, it was not used.
	Removed: Lots of unused internal things.
	Changed: Unified more functionality. Re-using already known facts about running processes. Bugs are expected.
	Added: Retrieve old info when encountering same process again if available.
	Added: Ideal affinity and adjust logging added to watchlist rule editing.